--- a/api/package.json
+++ b/api/package.json
@@ -24,11 +24,13 @@
     "@nestjs/common": "^9.0.11",
     "@nestjs/core": "^9.0.11",
     "@nestjs/mapped-types": "1.1.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fuse.js": "^6.6.2",
+    "mongoose": "^6.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6"
