--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.5",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
