--- a/web/.env.template
+++ b/web/.env.template
@@ -15,3 +15,5 @@ NEXT_PUBLIC_DEFAULT_LANGUAGE=en
 # Before enabling multilingual make sure your API supports multilingual
 NEXT_PUBLIC_ENABLE_MULTI_LANG=false
 NEXT_PUBLIC_AVAILABLE_LANGUAGES=en
+
+STATIC_FILES_DOMAIN="http://localhost:5000"
