--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@headlessui/react": "1.5.0",
     "@hookform/resolvers": "2.8.8",
+    "@mui/material": "^5.11.7",
     "@stripe/react-stripe-js": "1.7.0",
     "@stripe/stripe-js": "1.23.0",
     "@tailwindcss/forms": "0.4.0",
@@ -46,7 +49,9 @@
     "react-dropzone": "12.0.4",
     "react-hook-form": "7.27.1",
     "react-hot-toast": "2.2.0",
+    "react-icons": "^4.7.1",
     "react-phone-input-2": "2.15.0",
+    "react-player": "^2.11.0",
     "react-portal": "4.2.2",
     "react-query": "3.34.15",
     "react-share": "4.4.0",
