--- a/admin/.env.template
+++ b/admin/.env.template
@@ -9,6 +9,8 @@ NEXT_PUBLIC_AUTH_TOKEN_KEY=AUTH_CRED
 # Default Language
 NEXT_PUBLIC_DEFAULT_LANGUAGE=en
 
+STATIC_FILES_DOMAIN=http://localhost:5000
+
 # Multilang
 # Before enabling multilingual make sure your API supports multilingual
 NEXT_PUBLIC_ENABLE_MULTI_LANG=false
